# raspi_monitor

./: LCD.py  README.md  install.sh  pyproject.toml  raspi_monitor.service  raspi_monitor_init
raspi_monitor/: __main__.py
tests/: test_raspi_monitor.py
