[tool.poetry]
name = "raspi-monitor"
version = "0.1.0"
description = ""
authors = ["Florian Berchtold <florian.berchtold@luminartech.com>"]

[tool.poetry.dependencies]
python = "^3.6"
paho-mqtt = "^1.5.1"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
